@@ -4,16 +4,15 @@ use strict; use warnings FATAL => 'all';
 use Test::More 0.88;
 
 BEGIN {
-    use lib 't/lib';
     use_ok( 'Net::CLI::Interact');
 }
 
 new_ok('Net::CLI::Interact' => [
-    transport => 'Test'
+    transport => 'Loopback'
 ]);
 
 new_ok('Net::CLI::Interact' => [{
-    transport => 'Test'
+    transport => 'Loopback'
 }]);
 
 done_testing;
