@@ -3,11 +3,10 @@
 use strict; use warnings FATAL => 'all';
 use Test::More 0.88;
 
-use lib 't/lib';
 use Net::CLI::Interact;
 
 my $s = Net::CLI::Interact->new({
-    transport => 'Test',
+    transport => 'Loopback',
     personality => 'testing',
     add_library => 't/phrasebook',
 });
